...
            app:srcCompat="@drawable/ic_people_black_24dp" />

        ><ImageButton
            android:tint="@color/colorPrimaryDark"
        android:background="@drawable/buttonstyle"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/BTNLogoutFeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            app:srcCompat="@drawable/ic_exit_to_app_black_24dp" />
    </android.support.v7.widget.Toolbar>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
