<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:context=".EmailActivity"
    tools:showIn="@layout/activity_email">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:padding="16dp"
        android:text="@string/subject"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/ETemail_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailSubject"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:padding="16dp"
        android:text="@string/message"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:padding="16dp"
        android:id="@+id/ETemail_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:lines="10"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/BTsend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonstyle"
        android:fontFamily="@font/open_sans_bold"
        android:padding="16dp"
        android:text="@string/send"
        android:textColor="@color/colorPrimaryDark"
        android:tint="@color/colorPrimaryDark" />

</LinearLayout>