...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IVprofilePagePicture" />

    <TextView
        android:id="@+id/TVaboutMeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/about_me"
        android:textSize="20sp"
...
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVaboutMeTitle" />

    <TextView
        android:id="@+id/TVMyInterests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/my_interests"
        android:textSize="20sp"
...
